src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Explorer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Explorer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adventure Package</relationshipLabel>
        <relationshipName>Adventure_Package</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FulfillmentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FulfillmentId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fulfillment_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfillment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_State__c</fullName>
        <label>Fulfillment State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Not Created</fullName>
                    <default>true</default>
                    <label>Not Created</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Insurance_Price__c</fullName>
        <formula>PricebookEntry.Product2.Needs_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Insurance Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Waiver_Price__c</fullName>
        <formula>PricebookEntry.Product2.Needs_Waiver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Waiver Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Waiver</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>